--- a/package.json
+++ b/package.json
@@ -6,15 +6,30 @@
   "scripts": {
     "serve": "npm run build && npm run start",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "test": "jest"
   },
   "keywords": [],
-  "author": "",
+  "author": "Sravi Kommineni",
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^20.3.1",
     "express": "^4.18.2",
     "typescript": "^5.1.3"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.2",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0"
+  },
+  "jest": {
+    "modulesFileExtensions": ["ts"],
+    "transform": {
+      "^.+\\.ts$" : "ts-jest"
+    },
+    "collectCoverage": true,
+    "collectCoverageFrom": ["src/**/*.ts"],
+    "testMatch": ["**/test/**/*.test.ts"]
   }
 }
