--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "serve": "npm run build && npm run start",
     "build": "rm -rf dist/* && npm run test && tsc",
+    "clean": "rm -rf dist/* && rm -rf node_modules",
     "start": "node dist/src/index.js",
+    "fix": "prettier --write \"src/**/*.{js,ts}\" \"test/**/*.{js,ts}\" && eslint --fix \"src/**/*.{js,ts}\" \"test/**/*.{js,ts}\"",
     "test": "jest"
   },
   "keywords": [],
@@ -15,20 +17,33 @@
   "dependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^20.3.1",
-    "express": "^4.18.2",
-    "typescript": "^5.1.3"
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "@types/jest": "^29.5.2",
+    "@typescript-eslint/eslint-plugin": "^5.59.11",
+    "eslint": "^8.43.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-config-standard-with-typescript": "^35.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "jest": "^29.5.0",
-    "ts-jest": "^29.1.0"
+    "prettier": "^2.8.8",
+    "ts-jest": "^29.1.0",
+    "typescript": "^5.1.0"
   },
   "jest": {
     "transform": {
-      "^.+\\.ts$" : "ts-jest"
+      "^.+\\.ts$": "ts-jest"
     },
     "collectCoverage": true,
-    "collectCoverageFrom": ["src/**/*.ts"],
-    "testMatch": ["**/test/**/*.test.ts"]
+    "collectCoverageFrom": [
+      "src/**/*.ts"
+    ],
+    "testMatch": [
+      "**/test/**/*.test.ts"
+    ]
   }
 }
