--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^20.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "winston": "^3.9.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.2",
