--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/express": "^4.17.17",
     "@types/node": "^20.3.1",
     "express": "^4.18.2",
+    "prom-client": "^14.2.0",
     "winston": "^3.9.0"
   },
   "devDependencies": {
